--- a/index.html
+++ b/index.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Google</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <nav>
+            <div class="left">
+                <a href="">About</a>
+                <a href="">Store</a>
+            </div>
+            <div class="right">
+                <a href="">Gmail</a>
+                <a href="">Images</a>
+                <a href=""><img src="./images/appicon.png" alt="icon"></a>
+                <a href=""><button>Sign In</button></a>
+            </div>
+        </nav>
+
+        <main>
+            <div><img src="./images/googlelogo.png" alt="">
+            </div>
+
+            <div class="arama">
+                <img src="./images/magnifying_glass.jpg" alt="mercek" id="mer" style="height:auto; width: 30px;">
+                <input type="search">
+                <img src="./images/google_microphone.png" alt="mic" id="micro">
+            </div>
+
+            <div class="lucky">
+                <a href=""><button class="lucky1">Google Search</button></a>
+                <a href=""><button class="lucky2">I'm Feeling Lucky</button></a>
+            </div>
+            <div class="lang">
+                <p>Other Languages you can use Google: <a href="">English</a></p>
+            </div>
+        </main>
+
+        <footer>
+            <div class="header1">
+                <div class="Turkey"><a href="">Turkey</a>
+                </div>
+            </div>
+
+            <div class="header2">
+                <div class="footLeft">
+                    <a href="">Advertising</a>
+                    <a href="">Business</a>
+                    <a href="">How Search Works</a>
+                </div>
+
+                <div class="footRight">
+                    <a href="">Privacy</a>
+                    <a href="">Terms</a>
+                    <a href="">Settings</a>
+                </div>
+            </div>
+
+
+        </footer>
+
+
+    </div>
 </body>
+
 </html>
